<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="401dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/seja_bem_vindo" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:background="@mipmap/ic_launcher"
            android:onClick="onClick"
            android:text="@string/clique_me" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>